# land_value_prediction

./: .gitignore  README.md  create_dataset.py  pyproject.toml
code/: forecasting_prix.py  forecasting_prix_xgboost.py
data/Indice_Prix_Conso/: caractéristiques.csv  valeurs_mensuelles.csv
data/PIB/: econ-gen-pib-composante-trim.xlsx
data/indice_confiance_menage_synth/: 245_IR_Camme.xlsx
data/processed/: README.md  idf_immobilier_enriched.csv  idf_immobilier_filled_arrondissements.csv  idf_immobilier_full.csv
data/raw/: README.md  Webstat_Export_fr_ICP.M.FR.N.000000.4.csv  accessibilite-en-gare.csv  metro-france.csv
data/taux_interet_immo_moyen_particulier/: Taux_moyen_credit_bancaire_immobilier_particulier_trimestriel.xlsx
doc/: Brainstorm.docx  dictionnaire_donnees.xlsx  ~$dictionnaire_donnees.xlsx
notebooks/: 00-nettoyage_base.ipynb  01-analyse_exploratoire.ipynb
src/analyse base/: nettoyage_base.py
src/construction_de_la_base/: construction.ipynb
src/fonctions/: evaluation.py
src/forecast_prix/: forecasting_prix_prophet.py  pred_antonin.ipynb
src/land_value_prediction/: __init__.py
src/land_value_prediction/analyse_base_de_donnees/: analyse.py  analyse_variable_qualitative.py  analyse_variable_quantitative.py  nettoyage_base.py
src/land_value_prediction/fonctions/: __init__.py
src/land_value_prediction/forecast_prix/: forecasting.py  pred_antonin.ipynb
