[project]
name = "land-value-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Colin", email = "leocolin7002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas==2.3.2",
    "plotext>=5.3.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "xgboost>=2.0.0",
]

[project.scripts]
land-value-prediction = "land_value_prediction:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
