[project]
name = "land-value-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Colin", email = "leocolin7002@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas==2.3.2",
    "plotext>=5.3.2",
    "plotly>=6.3.1",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "xgboost>=2.0.0",
]

[project.scripts]
land-value-prediction = "land_value_prediction:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
